--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,6 @@ Package Control.merged-ca-bundle
 Package Control.user-ca-bundle
 oscrypto-ca-bundle.crt
 bh_unicode_properties.cache
+
+# Pycharm files
+/.idea
